# opencl_example

./: CMakeLists.txt  README.md  kernel.cl  main.cpp  openmp_example.cpp
